[gd_scene load_steps=4 format=3 uid="uid://bxg3sgcwpckrs"]

[ext_resource type="Script" path="res://code/player/shotgun.gd" id="1_i37o7"]
[ext_resource type="Texture2D" uid="uid://b5cyk0cbiwa6t" path="res://art/player/weapons/Flat Guns/gun4.png" id="2_xtkig"]
[ext_resource type="AudioStream" uid="uid://xs23ylncv6oh" path="res://art/sound/shotgunShoot.wav" id="3_ix262"]

[node name="Shotgun" type="Area2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_i37o7")

[node name="Pivot" type="Marker2D" parent="."]

[node name="Weapon" type="Sprite2D" parent="Pivot"]
position = Vector2(50, 0)
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_xtkig")

[node name="ShootingPoint1" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(400, -80)
scale = Vector2(23.1727, 20.8487)

[node name="ShootingPoint2" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(400, -80)
scale = Vector2(536.974, 434.668)

[node name="ShootingPoint3" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(400, -80)
scale = Vector2(536.974, 434.668)

[node name="ShootingPoint4" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(400, -80)
scale = Vector2(536.974, 434.668)

[node name="ShootingPoint5" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(400, -80)
scale = Vector2(536.974, 434.668)

[node name="ShootingPoint6" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(9669.06, -1747.9)
scale = Vector2(536.974, 434.668)

[node name="ShootingPoint7" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(9669.06, -1747.9)
scale = Vector2(536.974, 434.668)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ix262")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout_shotgun"]
